--- a/testBlackJack/testBlackJack.csproj
+++ b/testBlackJack/testBlackJack.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sharpBlackJack.csproj" />
+    <ProjectReference Include="..\sharpBlackJack\sharpBlackJack.csproj" />
   </ItemGroup>
 
 </Project>
